--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@ font-family: "soleil" !important;
     </div>
     
 	<div id="main_navbar_container" class="main_navbar_container"><ul id="main_navbar" class="main_navbar"><li id="menu-item-170" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-6 current_page_item menu-item-170 active"><a title="Home" href="index.html" class="first_level_menu_link">Home</a></li>
-<li id="menu-item-180" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-180"><a title="About" href="#about-3" class="first_level_menu_link">About</a></li>
-<li id="menu-item-181" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-181"><a title="Features" href="#features-3" class="first_level_menu_link">Features</a></li>
-<li id="menu-item-182" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-182"><a title="Contact" href="#contact-3" class="first_level_menu_link">Contact</a></li>
+<li id="menu-item-180" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-180"><a title="About" href="#about-3" class="first_level_menu_link">Sobre</a></li>
+<li id="menu-item-181" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-181"><a title="Features" href="#features-3" class="first_level_menu_link">Soluções</a></li>
+<li id="menu-item-182" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-182"><a title="Contact" href="#contact-3" class="first_level_menu_link">Contato</a></li>
 </ul></div>    
     <nav class="menu-main-menu-container"><ul id="mainNavUl" class="cd-primary-nav"> <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-6 current_page_item menu-item-170 active"><a title="Home" href="index.html" class="first_level_menu_link">Home</a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-180"><a title="About" href="#about-3" class="first_level_menu_link">About</a></li>
