--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <link rel="pingback" href="xmlrpc.php">
 
-<title>Classic Business Demo &#8211; Just another Stash &#8211; Multi Purpose WordPress Theme Sites site</title>
+<title>Empresa Junior Intra Consultoria Empresarial </title>
                         <script>
                             /* You can add more configuration options to webfontloader by previously defining the WebFontConfig with your options */
                             if ( typeof WebFontConfig === "undefined" ) {
